# SimmerTheToads

./: .dockerignore  .gitattributes  .gitignore  .screenrc  Dockerfile  Makefile  README.md  README.org  pyproject.toml  wsgi.py
ElevatorPitch/: ComponentOverview.pptx  script.md
SimmerTheToads/: README.md  __init__.py  engine.py  views.py
SimmerTheToads/static/: API_service.js  index.js  react_hello_world.js  song_form.js
SimmerTheToads/templates/: about.html  finished.html  index.html
SimmerTheToads/tests/: test_engine.py
Status/: final_video_script.md  status1.md  status2.md  status3.md  status4.md
details-context/: minViable.md  tasks.md
details-context/diagrams/: Timeline_Link.md  analysis.d2  systemDigaram.ipynb
frontend/: .env.development  package-lock.json  package.json
frontend/public/: index.html  info.html  manifest.json
frontend/src/: API_service.js  About.js  Alert.js  App.js  Bake_Loading.js  Flask.js  Footer.js  Header.css  Header.js  Home.js  Loading.js  Login.js  LoginFirst.js  Menu.js  Microwave_Loading.js  NiceImage.js  Person.js  PlaylistCard.js  PlaylistsView.js  SimmeringCard.js  SongList.js  Tabs.css  Tabs.js  existing.js  index.js  song_form.js
frontend/src/css/: App.css  Header.css  SongForm.css  SongList.css  Tabs.css  index.css
notebook/: final.md
