[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SimmerTheToads"
description = """Simmer The Toads aims to refine playlists of varying artists
and genres to gradually transition from various music styles to create a cohesive
listening experience."""
# readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flask ~= 2.2.2"]
dynamic = ["version"]

[tool.setuptools]
packages = ["SimmerTheToads"]

[tool.setuptools.dynamic]
version = { attr = "SimmerTheToads.__version__" }
